# taskplan

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  simple.py
examples/: house.solution.yaml  house.uncertain.solution.yaml  house.uncertain.yaml  house.yaml
taskplan/: __init__.py  __main__.py  dist.py  parse.py  parse_test.py  planner.py  planner_test.py  render.py  replay.py
testdata/: circular.yaml
