[tool.poetry]
name = "taskplan"
version = "0.1.0"
description = "Tool for efficiently laying out Gantt charts."
authors = ["Steinar V. Kaldager <steinarvkaldager@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ortools = "^8.2.8710"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
